# Differential

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  config-test.ini  config.ini.example  copy.ini.example  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yml  pypipublish.yml
Differential-0.0.0/: .gitignore  LICENSE  MANIFEST.in  PKG-INFO  README.md  config.ini.example  requirements.txt  setup.py
Differential-0.0.0/differential/: constants.py  main.py
Differential-0.0.0/differential/plugins/: __init__.py  chdbits.py  league_official.py  nexusphp.py  pterclub.py
Differential-0.0.0/differential/utils/: binary.py  browser.py  torrent.py
Differential-0.0.0/differential/utils/image/: imgurl.py  ptpimg.py  smms.py
differential/: base_plugin.py  commands.py  constants.py  main.py  plugin_register.py  torrent.py  utils.py  version.py
differential/plugins/: __init__.py  base.py  chdbits.py  chdbits_encode.py  gazelle.py  hdbits.py  league_official.py  lemonhd.py  nexusphp.py  pterclub.py  ptp.py  unit3d.py
differential/utils/: binary.py  browser.py  config.py  mediainfo.py  parse.py  ptgen_handler.py  screenshot_handler.py  torrent.py
differential/utils/image/: __init__.py  byr.py  chevereto.py  cloudinary.py  hdbits.py  imgbox.py  imgurl.py  ptpimg.py  smms.py  types.py
differential/utils/ptgen/: bangumi.py  base.py  douban.py  indienova.py  parser.py
differential/utils/uploader/: __init__.py  auto_feed.py  easy_upload.py
src/differential/: base_plugin.py  commands.py  constants.py  main.py  plugin_loader.py  rename_cli.py  version.py
src/differential/plugins/: chdbits.py  chdbits_encode.py  greatposterwall.py  league_official.py  ptp.py  unit3d.py
src/differential/utils/: binary.py  config.py  media_identity.py  media_name.py  media_search.py  media_tui.py  mediainfo_handler.py  nfo.py  privilege.py  ptgen_handler.py  screenshot_handler.py  torrent.py
src/differential/utils/image/: __init__.py  chevereto.py  lsky.py  ptpimg.py  smms.py  types.py
src/differential/utils/ptgen/: bangumi.py  base.py  douban.py  epic.py  formatter.py  imdb.py  indienova.py  providers.py  reference.py  steam.py
src/differential/utils/rename/: __init__.py  apply.py  config.py  formatter.py  metadata.py  models.py  plan.py  prompt.py  scan.py  tokens.py
src/differential/utils/uploader/: __init__.py  auto_feed.py  easy_upload.py
tests/: test_auto_feed.py  test_bdinfo_runner.py  test_binary.py  test_config.py  test_easy_upload.py  test_iso_mount.py  test_main_cli.py  test_media_identity.py  test_media_name.py  test_media_name_torcp_cases.py  test_media_rename_apply.py  test_media_rename_cli.py  test_media_rename_formatter.py  test_media_rename_metadata.py  test_media_rename_plan.py  test_media_search.py  test_media_tui.py  test_plugin_loader.py  test_ptgen_providers.py  test_screenshot_handler.py
