[project]
name = "Differential"
dynamic = ["version"]
description = "A Python script for easy uploading torrents to various PT sites."
readme = "README.md"
authors = [
    { name = "Lei Shi", email = "me@leishi.io" }
]
license = { text = "MIT" }
keywords = ["PT", "mediainfo", "ptgen", "ptpimg"]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.9"

dependencies = [
    "loguru",
    "requests",
    "lxml",
    "Pillow>=9.0.0",
    "pymediainfo>=7.0.0",
    "torf>=4.3.0",
    "bencode.py==4.0.0",
    "textual>=8.2.7",
    # "gradio>=4.44.1",
]

[project.scripts]
differential = "differential.main:main"
dft = "differential.main:main"
dft-rename = "differential.rename_cli:main"
differential-rename = "differential.rename_cli:main"

[project.urls]
Homepage = "https://github.com/leishi1313/Differential"
Repository = "https://github.com/leishi1313/Differential"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/differential/version.py"
template = "version = '{version}'\n"

[tool.hatch.build.targets.sdist]
only-include = [
    "LICENSE",
    "README.md",
    "config.ini.example",
    "pyproject.toml",
    "requirements.txt",
    "src",
    "tests",
    "uv.lock",
]
excludes = [
    "src/differential/media_select_cli.py",
    "tests/test_media_select_cli.py",
    "**/__pycache__",
    "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["src/differential"]
exclude = [
    "src/differential/media_select_cli.py",
    "**/__pycache__",
    "**/*.pyc",
]
